// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDescriptionTerm should render correctly 1`] = `
<DocumentFragment>
  <dl
    class="bpk-description-list__term "
  >
    Term
  </dl>
</DocumentFragment>
`;

exports[`BpkDescriptionTerm should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <dl
    class="bpk-description-list__term test-term"
  >
    Term
  </dl>
</DocumentFragment>
`;

exports[`BpkDescriptionTerm should render correctly with a other attributes 1`] = `
<DocumentFragment>
  <dl
    class="bpk-description-list__term "
    title="this is a term"
  >
    Term
  </dl>
</DocumentFragment>
`;
